# misc

./: README.md  index.html
rect_intersect/: CMakeLists.txt  README.md  app.cpp  io_helper.cpp  main.cpp  main.h  rect_intersect.vcxproj  test.cpp
rect_intersect/3rd/: README.md
rect_intersect/src/: app.cpp  io_helper.cpp  io_helper.h  main.cpp  rect.cpp  rect.h
rect_intersect/test/: sample.json  sample6.json  sample6_32.json  sample6_64.json  sample7.json  sample8.json  sample_shifted.json  test.cpp
rect_intersect/vc14/: main.sln  rect_intersect.sln
rect_intersect/vc14/main/: main.vcxproj
rect_intersect/vc14/test/: test.vcxproj
